# ufs-tools

./: .gitignore  .gitmodules  README.md  compile_ufs.sh  drive_run_ufs.sh  drive_ufs.sh  run_ufs.sh
buildHarness/: CMakeLists.txt
buildHarness/cmake/: compiler_flags.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_Fortran.cmake
compile_dycore/: CMakeLists.txt  README.md
fv3lam/: CMakeLists.txt  README.md  module_fv3lam.f90  read_fv3lam.f90
fv3lam/cmake/: fv3lam_compiler_flags.cmake
fv3lam/test1x1/: input.nml
fv3lam/test2x2/: input.nml
fv3lam/test2x2/INPUT/: .gitignore
parm/: diag_table.tmpl  input.nml.tmpl  model_configure.tmpl  nems.configure.tmpl
run/: wcoss2.sh.tmpl  wcoss_dell_p3.sh.tmpl
scripts/: configure.sh  configure_run.sh  driver.sh  get_data.sh  setup.sh  setup_model.sh
